# arduino

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  platformio.ini  pyproject.toml
.github/: pull_request_template.md
.github/temp/: README.md  rename_project.sh
.github/workflows/: lint.yaml  rename.yaml  test-build.yaml  validate.yaml
include/: config.h
src/: main.cpp
test/: test_main.cpp
