[tool.poetry]
name = "rmenai-blueprints/arduino"
version = "0.1.0"
description = "My Arduino template"
authors = ["rmenai <rami.menai@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
platformio = "^5.2.2"
taskipy = "^1.8.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
build = "platformio run"
debug = "platformio debug"
test = "platformio test"
upload = "platformio run --target upload"
clean = "platformio run --target clean"
init = "platformio -c clion init --ide clion"
clang = "sudo apt-get install clang clang-format clang-tidy"
lint = "pre-commit run --all-files"
precommit = "pre-commit install"
